# oop-0304-examples

cyberc001/lab1/: field.h  field_view.cpp  отчёт.odt
cyberc001/lab1/cells/: cell.h  cell_entrance.h  cell_exit.h  cell_view.h
cyberc001/lab2/: cell_object_view.cpp  field.cpp  main.cpp
cyberc001/lab2/actions/: action.h  action_move.h  action_shoot_ballistic.h
cyberc001/lab2/actors/: actor.h  enemy.cpp  item.cpp  player.cpp
cyberc001/lab2/cells/: cell_entrance.cpp  cell_exit.cpp  cell_view.h
cyberc001/lab3/: main.cpp  makefile  uml.class.violet.html  отчёт.odt
cyberc001/lab3/actions/: action_combat.h  (+3 more)
cyberc001/lab4/: cell_object.cpp  cell_object.h  field.h  game.cpp  game.h  game_out  lab4  main.cpp  makefile  uml.class.violet.html  отчёт.odt
cyberc001/lab5/: cell_object.cpp  cell_object.h  config_bind  field_view.cpp  game.cpp  game.h  game_out  game_ui.cpp  game_ui.h  main.cpp  makefile  uml.class.violet.html  отчёт.odt
cyberc001/lab6/: cell_object.h  cell_object_view.h  config_bind  field.cpp  field.h  field_view.h  game.cpp  game.h  game_out  main.cpp  makefile  uml.class.violet.html  отчёт.odt
lab1/: cell_object.h  field.cpp  field_view.h  main.cpp  makefile
lab1/cells/: cell.cpp  cell_entrance.cpp  cell_exit.cpp  cell_view.cpp
lab2/: cell_object.cpp  cell_object.h  makefile  отчёт.odt
lab2/actions/: action_combat.cpp  action_combat.h  action_move.cpp
lab2/actors/: actor.cpp  actor.h  enemy.cpp  enemy.h  item.cpp  item.h  player.cpp  player.h
lab2/cells/: cell_view.cpp  cell_view.h
sovietsolider/GAME_PROJ/: CMakeLists.txt
sovietsolider/GAME_PROJ/headers/: cell.h  cellObject.h  cellObjectView.h  cellView.h  enemy.h  enemyBoss.h  enemyMove.h  enemyStand.h  exitCond.h  field.h  field_view.h  fstreamWrapper.h  game.h  gameCond.h  inputController.h  logger.h  object.h  objectDamage.h  objectHeal.h  objectRange.h  ostreamWrapper.h  player.h  playerDeathCond.h
sovietsolider/GAME_PROJ/headers/binds/: bind.h  bindExit.h  bindFight.h  bindGame.h  bindMoveDown.h  bindMoveLeft.h  bindMoveRight.h  bindMoveUp.h  bindPlayer.h
sovietsolider/GAME_PROJ/sources/: cell.cpp  cellObject.cpp  cellObjectView.cpp  cellView.cpp  enemy.cpp  enemyBoss.cpp  enemyMove.cpp  enemyStand.cpp  exitCond.cpp  field.cpp  field_view.cpp  fstreamWrapper.cpp  game.cpp  inputController.cpp  logger.cpp  main.cpp  objectDamage.cpp  objectHeal.cpp  objectRange.cpp  ostreamWrapper.cpp  player.cpp  playerDeathCond.cpp
sovietsolider/GAME_PROJ/sources/binds/: bind.cpp  bindExit.cpp  bindFight.cpp  bindMoveDown.cpp  bindMoveLeft.cpp  bindMoveRight.cpp  bindMoveUp.cpp  bindPlayer.cpp
(+141 files in other folders)
